--- a/src/styles/theme/base.scss
+++ b/src/styles/theme/base.scss
@@ -16,7 +16,8 @@ html {
     --el-submenu-bg-color: rgb(30, 36, 48) !important;
     // menu 文字颜色
     --el-menu-text-color: hsla(0, 0%, 100%, 0.65) !important;
-
+    //menu border-right 边框
+    --el-menu-border-color:rgb(41, 51, 72) !important;
     // menu hover 背景颜色
     --el-menu-hover-bg-color: transparent !important;
 
