--- a/src/styles/theme/dark.scss
+++ b/src/styles/theme/dark.scss
@@ -21,6 +21,8 @@ html.dark {
     --el-submenu-bg-color: #101010 !important;
     // menu 文字颜色
     --el-menu-text-color: hsla(0, 0%, 100%, 0.65) !important;
+     //menu border-right 边框
+    --el-menu-border-color:#181717 !important;
 
     // menu hover 背景颜色
     --el-menu-hover-bg-color: transparent !important;
